--- a/login.html
+++ b/login.html
@@ -38,43 +38,22 @@
     </nav>
 
     <div class="container">
-        <form class="form-horizontal" action="/action_page.php">
+        <form action="/action_page.php">
             <div class="form-group">
-                <label class="control-label col-sm-2" for="username">Username:</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="username" placeholder="Enter username">
-                </div>
+              <label for="email">Email address:</label>
+              <input type="email" class="form-control" placeholder="Enter email" id="email">
             </div>
             <div class="form-group">
-              <label class="control-label col-sm-2" for="email">Email:</label>
-              <div class="col-sm-10">
-                <input type="email" class="form-control" id="email" placeholder="Enter email">
-              </div>
+              <label for="pwd">Password:</label>
+              <input type="password" class="form-control" placeholder="Enter password" id="pwd">
             </div>
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="num">Mobile No:</label>
-                <div class="col-sm-10">
-                  <input type="number" class="form-control" id="num" placeholder="Enter number">
-                </div>
-              </div>
-            <div class="form-group">
-              <label class="control-label col-sm-2" for="pwd">Password:</label>
-              <div class="col-sm-10">
-                <input type="password" class="form-control" id="pwd" placeholder="Enter password">
-              </div>
+            <div class="form-group form-check">
+              <label class="form-check-label">
+                <input class="form-check-input" type="checkbox"> Remember me
+              </label>
             </div>
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="cpwd">Confirm Password:</label>
-                <div class="col-sm-10">
-                  <input type="password" class="form-control" id="cpwd" placeholder="Enter password again">
-                </div>
-            </div>
-            <div class="form-group">
-              <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-default">SignUp</button>
-              </div>
-            </div>
-          </form>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
     </div>
 
 
